--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -14,5 +14,7 @@
     private void IncrementCount()
     {
         currentCount++;
+        if (currentCount > 10)
+            TriggerWarning($"Counter is too high {currentCount}");
     }
 }
