--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,6 +4,32 @@
 
 <h1>Hello, world!</h1>
 
+@if(warning != null)
+{
+    <div class="alert alert-warning m-3">
+        @warning.Date  @warning.Message
+    </div>
+}
+
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<Counter />
+
+@code {   
+    WarningEventArgs warning;
+    protected override async Task OnInitializedAsync()
+    {
+        WarningTriggered += (o, args) =>
+        {
+            warning = args;
+            InvokeAsync(StateHasChanged);
+        };
+        WarningResseted += (a, args) =>
+        {
+            warning = null;
+            InvokeAsync(StateHasChanged);
+        };
+    }
+}
