--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BlazorApp2
 @using BlazorApp2.Shared
+@using BlazorApp2.Events
+@using BlazorApp2.Events.CustomEventArgs
+@inherits EventBase
