Javascript isolation / Error component

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,3 +11,5 @@
 @using BlazorApp2.Events
 @using BlazorApp2.Events.CustomEventArgs
 @inherits EventBase
+@using Blazored.Toast
+@using Blazored.Toast.Services
