--- a/App.razor
+++ b/App.razor
@@ -1,4 +1,6 @@
-﻿<Error>
+﻿<Fluxor.Blazor.Web.StoreInitializer />
+
+<Error>
     <CascadingAuthenticationState>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
