--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,5 +11,9 @@
 @using BlazorApp2.Events
 @using BlazorApp2.Events.CustomEventArgs
 @inherits EventBase
+
 @using Blazored.Toast
 @using Blazored.Toast.Services
+
+@using Fluxor;
+@using Fluxor.Blazor.Web.Components;
