--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,5 +1,13 @@
 ﻿@page "/counter"
 
+@using BlazorApp2.Store.Counter;
+
+@inherits FluxorComponent                       // Ensure the component re-renders whenever its state changes
+
+@inject IState<CounterState> CounterState
+@inject IDispatcher Dispatcher
+
+
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
@@ -9,12 +17,15 @@
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
+    //private int currentCount = 0;
+    private int currentCount => CounterState.Value.Count;
 
     private void IncrementCount()
     {
-        currentCount++;
-        if (currentCount > 10)
-            TriggerWarning($"Counter is too high {currentCount}");
+        Dispatcher.Dispatch(new IncreaseCounter());
+
+        //currentCount++;
+        //if (currentCount > 10)
+        //    TriggerWarning($"Counter is too high {currentCount}");
     }
 }
